# fiap

./: Diagrama sem nome.drawio  Diagrama.drawio  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  scraper.py
app/jwt/: auth.py  auth_routes.py  config.py  dependencies.py  models.py
app/routes/: comercializacao.py  exportacao.py  home.py  importacao.py  processamento.py  producao.py
app/services/: dados_embrapa.py  redis_cache.py
app/templates/: index.html  index1.html  index2.html
tests/: test_app.py
